[gd_scene load_steps=3 format=3 uid="uid://cgpoy4es3i0og"]

[ext_resource type="Script" uid="uid://fmoj6c6fft4a" path="res://scripts/shuriken_gun.gd" id="1_khmjn"]
[ext_resource type="Texture2D" uid="uid://pnhr87365tqf" path="res://sprites/Shuriken.png" id="1_wrad3"]

[node name="Shuriken" type="Node2D"]
script = ExtResource("1_khmjn")

[node name="RotationOffset" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="RotationOffset"]
texture = ExtResource("1_wrad3")

[node name="Shadow" type="Sprite2D" parent="RotationOffset/Sprite2D"]
modulate = Color(0, 0, 0, 0.215686)
z_index = -1
texture = ExtResource("1_wrad3")

[node name="shootPos" type="Marker2D" parent="RotationOffset/Sprite2D"]

[node name="shootTimer" type="Timer" parent="."]

[connection signal="timeout" from="shootTimer" to="." method="_on_shoot_timer_timeout"]
